--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
 	},
 	"directories": {
 		"lib": "./lib",
-		"bin": "./bin",
 		"doc": "./doc"
 	},
-	"main": "./lib/index",
-	"bin": {
-		"test": "./bin/test"
-	}
+	"main": "./lib/index"
 }
