--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	},
 	"preferGlobal": false,
 	"private": false,
+	"dependencies": {
+		"ops": "~0.0.1"
+	},
 	"engines": {
 		"node": "~0.6.0"
 	},
